--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <TITLE>Pofesionales más Humanos</TITLE>
 </HEAD>
 
-<BODY background= "img/profesionales.jpg" >
+<BODY background= "EXAMENPARCIAL1_GUILLERMO_SAUCEDO/img/profesionales.jpg" >
 
 <FONT face="Arial" color="black" size="3">
 
@@ -11,7 +11,7 @@
 <H1><U>Guillermo Andrés Saucedo Dávalos</U></H1>
 </div>
 <div align="center">
-<IMG src="img/fotoBIO.jpg" height=20% width=10% border=5>
+<IMG src="EXAMENPARCIAL1_GUILLERMO_SAUCEDO/img/fotoBIO.jpg" height=20% width=10% border=5>
 </div> </A> <BR>
 
 <A name="registro">
@@ -93,7 +93,7 @@
 
 <A name="registro"><TABLE align=CENTER>
 <TR>
-<TD><IMG src="img/vision.jpg" align=RIGHT hspace=5 border=5></TD>	
+<TD><IMG src="EXAMENPARCIAL1_GUILLERMO_SAUCEDO/img/vision.jpg" align=RIGHT hspace=5 border=5></TD>	
 </TR>
 </TABLE>
 
